# rust-context-engine

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  MANUALE.md  README.md  install.sh  rtk.rb
.githooks/: pre-push
.github/workflows/: ci.yml  release.yml
Formula/: rtk.rb
claudedocs/: RTK-STATE-2.4.0-AND-ROADMAP.md
data/: model_pricing.json
docs/: COMMUNITY.md  CONTRIBUTING.md  DOGFOOD.md  IMPROVEMENT_PLAN_9PLUS.md  PLAN_CLOSURE.md  PLAN_NOW.md  QUICKSTART.md  RELEASE.md  RELEASE_v2.3.1.md  ROADMAP.md  USER.md
docs/archive/: IMPROVEMENT_PLAN_9PLUS.md  README.md
docs/src/: configuration.md
rtk/: Cargo.toml
rtk-p0-delivery/: implementation_plan.md  walkthrough.md
rtk/rtk-cli/: Cargo.toml
rtk/rtk-cli/assets/: ponytail.mdc
rtk/rtk-cli/src/: cli.rs  dispatch.rs  index_cli.rs  main.rs  rewrite.rs  setup.rs  validate.rs
rtk/rtk-cli/tests/: fixtures.rs  integration_test.rs
rtk/rtk-db/: Cargo.toml
rtk/rtk-db/src/: config.rs  dlp.rs  pricing.rs  tracking.rs
rtk/rtk-filters/: Cargo.toml
rtk/rtk-filters/src/: eslint_filter.rs  lib.rs  pip_filter.rs  ruff_filter.rs  tsc_filter.rs  vitest_filter.rs
rtk/rtk-filters/src/snapshots/: rtk_context_filters__git_diff__tests__snapshot.snap
rtk/rtk-filters/tests/fixtures/: eslint_stylish.txt  pip_install_verbose.txt  ruff_check_full.txt  tsc_pretty.txt  vitest_run.txt
rtk/rtk-index/: Cargo.toml
rtk/rtk-index/src/: graph.rs  lib.rs  parser.rs
rtk/rtk-mcp/: Cargo.toml
rtk/rtk-mcp/src/: lib.rs
rtk/rtk-pack/: Cargo.toml
rtk/src/: dashboard.rs  dlp.rs  docker_filter.rs  go_test.rs  gradle.rs  ls_filter.rs  main.rs  pack.rs  rewrite.rs  setup.rs  skeleton.rs  status.rs  think.rs  tracking.rs
rtk/tests/: integration_test.rs
rtk/tests/common/: mod.rs
rtk/tests/fixtures/: cargo_build_clean.txt  cargo_check_warnings.txt  cargo_test_passing.txt  git_diff_raw.txt  git_log_raw.txt  git_status_dirty.txt
rules/: rtk-toolkit.mdc
scripts/: benchmark.py  dev-gate.sh  homebrew_smoke.sh  publish-crates.sh  release_smoke.sh  rtk-dev.env.sh  setup-dogfood.sh  setup-githooks.sh  update_homebrew_sha256.sh
skills/rtk-efficiency/: SKILL.md
