[package]
name = "rtk-cli"
version = "2.3.0"
edition = "2021"
description = "RTK — main entrypoint binary and command router CLI"
license = "Apache-2.0"
repository = "https://github.com/andreafinazziinfo/rust-context-engine"

[[bin]]
name = "rtk"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde_json = "1"
regex = "1"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
rtk-filters = { version = "2.3.0", path = "../rtk-filters" }
rtk-db = { version = "2.3.0", path = "../rtk-db" }
rtk-pack = { version = "2.3.0", path = "../rtk-pack" }
rtk-index = { version = "2.3.0", path = "../rtk-index" }
rtk-mcp = { version = "2.3.0", path = "../rtk-mcp" }



[dev-dependencies]
insta = "1"
proptest = "1"
