[package]
name = "rtk-context-engine"
version = "2.3.2"
edition = "2021"
description = "RTK — main entrypoint binary and command router CLI"
license = "Apache-2.0"
repository = "https://github.com/andreafinazziinfo/rust-context-engine"

[[bin]]
name = "rtk"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde_json = "1"
regex = "1"
serde = { version = "1", features = ["derive"] }
toml = "1.1"
rtk_filters = { package = "rtk-context-filters", version = "2.3.2", path = "../rtk-filters" }
rtk_db = { package = "rtk-context-db", version = "2.3.2", path = "../rtk-db" }
rtk_pack = { package = "rtk-context-pack", version = "2.3.2", path = "../rtk-pack" }
rtk_index = { package = "rtk-context-index", version = "2.3.2", path = "../rtk-index" }
rtk_mcp = { package = "rtk-context-mcp", version = "2.3.2", path = "../rtk-mcp" }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
insta = "1"
proptest = "1"
