[package]
name = "rtk-context-db"
version = "2.3.0"
edition = "2021"
description = "RTK — SQLite FTS5 context memory database, DLP redaction, and config"
license = "Apache-2.0"
repository = "https://github.com/andreafinazziinfo/rust-context-engine"

[dependencies]
anyhow = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
serde_json = "1"
serde = { version = "1", features = ["derive"] }
regex = "1"
chrono = { version = "0.4", optional = true }
