[package]
name = "rtk-context-filters"
version = "2.3.0"
edition = "2021"
description = "RTK — pre-built parser filters for CLI command outputs"
license = "Apache-2.0"
repository = "https://github.com/andreafinazziinfo/rust-context-engine"

[dependencies]
regex = "1"

[dev-dependencies]
insta = "1"
