[package]
name = "rtk-index"
version = "2.3.0"
edition = "2021"
description = "RTK — code graph indexing, symbols navigation, and blast radius impact analyzer"
license = "Apache-2.0"
repository = "https://github.com/andreafinazziinfo/rust-context-engine"

[dependencies]
anyhow = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
petgraph = "0.6"
tree-sitter = "0.22"
tree-sitter-rust = "0.21"
tree-sitter-python = "0.21"
tree-sitter-typescript = "0.21"
tree-sitter-javascript = "0.21"
tree-sitter-go = "0.21"

[dependencies.tract-onnx]
version = "0.21.8"
optional = true

[dependencies.tokenizers]
version = "0.19.1"
optional = true

[dependencies.ndarray]
version = "0.15.6"
optional = true

[dependencies.ort]
version = "2.0.0-rc.9"
optional = true
default-features = false

[features]
default = []
embeddings = ["dep:tract-onnx", "dep:tokenizers", "dep:ndarray"]
ort = ["dep:ort"]
onnx-cuda = ["embeddings", "ort", "ort/cuda"]
onnx-coreml = ["embeddings", "ort", "ort/coreml"]
onnx-directml = ["embeddings", "ort", "ort/directml"]

