[package]
name = "rtk-context-index"
version = "2.4.0"
edition = "2021"
description = "RTK — code graph indexing, symbols navigation, and blast radius impact analyzer"
license = "Apache-2.0"
repository = "https://github.com/andreafinazziinfo/rust-context-engine"

[dependencies]
anyhow = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
petgraph = "0.8"
tree-sitter = "0.26"
tree-sitter-rust = "0.24"
tree-sitter-python = "0.25"
tree-sitter-typescript = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-go = "0.23"

[dependencies.tract-onnx]
version = "0.23.4"
optional = true

[dependencies.tokenizers]
version = "0.23.1"
optional = true

[dependencies.ndarray]
version = "0.15.6"
optional = true

[dependencies.ort]
version = "2.0.0-rc.9"
optional = true
default-features = false

[features]
# Default build: AST graph + FTS only (no ONNX).
default = []
# Hybrid semantic search via tract-onnx + HF tokenizers.
embeddings = ["dep:tract-onnx", "dep:tokenizers", "dep:ndarray"]
# Optional ort backend (alternative to tract for embeddings).
ort = ["dep:ort"]
# GPU / accelerator backends (require embeddings + ort):
onnx-cuda = ["embeddings", "ort", "ort/cuda"]
onnx-coreml = ["embeddings", "ort", "ort/coreml"]
onnx-directml = ["embeddings", "ort", "ort/directml"]

