[package]
name = "rtk-mcp"
version = "2.3.0"
edition = "2021"
description = "RTK — Model Context Protocol (MCP) server for local context tools"
license = "Apache-2.0"
repository = "https://github.com/andreafinazziinfo/rust-context-engine"

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rtk-db = { version = "2.3.0", path = "../rtk-db" }
rtk-index = { version = "2.3.0", path = "../rtk-index" }
rtk-pack = { version = "2.3.0", path = "../rtk-pack" }
dirs = "5.0"
