[package]
name = "rtk-context-mcp"
version = "2.3.2"
edition = "2021"
description = "RTK — Model Context Protocol (MCP) server for local context tools"
license = "Apache-2.0"
repository = "https://github.com/andreafinazziinfo/rust-context-engine"

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rtk_db = { package = "rtk-context-db", version = "2.3.2", path = "../rtk-db" }
rtk_index = { package = "rtk-context-index", version = "2.3.2", path = "../rtk-index" }
rtk_pack = { package = "rtk-context-pack", version = "2.3.2", path = "../rtk-pack" }
dirs = "5.0"
