[package]
name = "rtk-context-pack"
version = "2.3.1"
edition = "2021"
description = "RTK — code layout packing and AST skeleton parser modules"
license = "Apache-2.0"
repository = "https://github.com/andreafinazziinfo/rust-context-engine"

[dependencies]
anyhow = "1"
tree-sitter = "0.22"
tree-sitter-rust = "0.21"
tree-sitter-python = "0.21"
tree-sitter-javascript = "0.25"
tree-sitter-typescript = "0.21"
tree-sitter-go = "0.21"
tree-sitter-java = "0.21"
rtk_db = { package = "rtk-context-db", version = "2.3.1", path = "../rtk-db" }
