[package]
name = "rtk-context-pack"
version = "2.4.0"
edition = "2021"
description = "RTK — code layout packing and AST skeleton parser modules"
license = "Apache-2.0"
repository = "https://github.com/andreafinazziinfo/rust-context-engine"

[dependencies]
anyhow = "1"
tree-sitter = "0.26"
tree-sitter-rust = "0.23"
tree-sitter-python = "0.25"
tree-sitter-javascript = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-go = "0.23"
tree-sitter-java = "0.23"
rtk_db = { package = "rtk-context-db", version = "2.4.0", path = "../rtk-db" }
